<resources>
    <string name="app_name">Shapes</string>
    <string name="action_settings">Settings</string>

    <!--Main Menu Strings-->
    <string name="Play">Play</string>
    <string name="Challenge">Daily Challenge</string>
    <string name="Multiplayer">Play With Friends</string>
    <string name="Scores">Scores</string>
    <string name="Help">Help</string>
    <string name="help_description">Help Button</string>
    <string name="Settings">Settings</string>
    <string name="settings_description">Settings Button</string>

    <!-- Play Menu Strings-->
    <string name="GameArea">Game Playing Area</string>
    <string name="CurrentScoreLabel">Current Score:   </string>
    <string name="CurrentScore">  xxxx</string>

    <!-- Scores Strings-->
    <string name="HighScore_Title">High Scores</string>
    <string name="HighScore">Your Highest Score:</string>
    <string name="Placeholder_number">123456</string>
    <string name="Friends_Scores">No friends scores available.</string>

    <!-- Friends menu strings-->
    <string name="Friends_title">Friends</string>
    <string name="add_friends">Add Friends</string>
    <string name="fake_friend">Fake Friend</string>
    <string name="title_activity_main">MainActivity</string>
    
    <!-- Help screen strings-->
    <string name="Help_title">Help</string>
    <string name="instruct1">Just make shapes man\!</string>
    <string name="instruct2">Connect every blue edge to another blue edge. It\'s that simple</string>

    <!-- Settings screen strings-->
    <string name="Settings_title">Settings</string>
    <string name="bgVolume">Background Volume</string>
    <string name="effVolume">Effects Volume</string>
    <string name="Clear_Button">Clear Scores</string>
    <string name="logout_Button">Logout</string>
    <string name="deleteUser_Button">Delete user</string>
    <string name="backToLoginScreen_button">Login Screen</string>
    <string name="backtoMain_button">Main Menu</string>


    <!-- login screen strings-->
    <string name="Username">Username:</string>
    <string name="Password">Password:</string>
    <string name="Create_Button">Create user</string>
    <string name="login_Button">Login</string>
    <string name="PlayLocalButton">Play offline</string>

</resources>
