<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/Background"
    android:textColor="@color/Text">

    <!--- Screen title "Help" -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Help_title"
        android:id="@+id/HelpTitle"
        android:textColor="@color/Text"
        android:textSize="32sp"
        android:layout_marginTop="48dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <!--- instructions 1-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/instruct1"
        android:textColor="@color/Text"
        android:id="@+id/instruct1"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/HelpTitle"
        android:layout_centerHorizontal="true" />

    <!--- instructions 2-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/instruct2"
        android:textColor="@color/Text"
        android:id="@+id/instruct2"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:textAlignment="center" />

    <!-- actual demo -->
    <VideoView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/videoView"
        android:background="@color/Background"
        android:layout_below="@+id/instruct1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/instruct2"
        android:scaleType="fitCenter"/>

</RelativeLayout>