<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/Background"
    android:textColor="@color/Text">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/Title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:textColor="@color/Text"
        android:textSize="110dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userName"
        android:textSize="20sp"
        android:textColor="@color/TextFields"
        android:layout_below="@+id/Title"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:ems="10"
        android:textColor="@color/TextFields"
        android:id="@+id/userPassword"
        android:layout_below="@+id/userName"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_Button"
        android:id="@+id/Login_Button"
        android:textSize="24sp"
        android:textColor="@color/Text"
        style="?android:attr/borderlessButtonStyle"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Create_Button"
        android:id="@+id/Create_Button"
        android:textSize="24sp"
        android:textColor="@color/Text"
        style="?android:attr/borderlessButtonStyle"
        android:layout_above="@+id/Login_Button"
        android:layout_centerHorizontal="true" />



</RelativeLayout>